# diabetes-classification

./: README.md  flutter_service_worker.js  pyproject.toml  python-worker.js
og-notebook/: Diabetes_Analysis.ipynb
src/: test.py  train.py
src/interface/: main.py
src/interface/pages/: index.py
