[tool.poetry]
name = "diabetes-classification"
version = "0.1.0"
description = ""
authors = ["PedroG022"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
flet = "^0.17.0"
fletrt = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
